# research-recommendation-api

./: .gitignore  .gitreview  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  entrypoint.sh  get-embeddings.sh  gunicorn.conf.py  logging.yaml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run-test.sh  setup.py  tox.ini
.pipeline/: blubber.yaml  config.yaml
recommendation/: cache.py  main.py
recommendation/api/: api.py  helper.py  swagger.yml
recommendation/api/external_data/: fetcher.py  wikidata.py
recommendation/api/external_data/test/: test_fetcher_formatted_endpoint.py  test_wikidata_chunker.py
recommendation/api/test/: test_api.py
recommendation/api/translation/: candidate_finders.py  filters.py  models.py  pageviews.py  translation.py
recommendation/api/types/related_articles/: candidate_finder.py  related_articles.py
recommendation/api/types/test/: test_translation_and_related_articles_relationship.py
recommendation/api/types/translation/: candidate_finders.py  filters.py  pageviews.py  recommendation.py  translation.py
recommendation/data/: labs_setup.sh  measure_throughput.py  profile_performance.py  recommendation.ini  recommendation.nginx  recommendation.service  recommendation.wsgi  recommendation_liftwing.ini  release.sh  uwsgi.ini  uwsgi_liftwing.ini
recommendation/external_data/: fetcher.py
recommendation/recommenders/: base_recommender.py  collection_recommender.py  featured_collection_search_recommender.py  multiple_collection_recommender.py  popular_recommender.py  recommender_factory.py  search_recommender.py  single_collection_recommender.py
recommendation/test/: conftest.py  locustfile.py  test_api.py  test_async_helper.py  test_difficulty_helper.py  test_language_codes.py  test_language_pairs.py  test_multiple_collection_recommender.py  test_recommendation.ini  test_search_query_builder.py  test_search_recommender.py  test_sitematrix.py  test_size_helper.py
recommendation/test/locust/: README.md  inputs.csv  locust.conf  locustfile.py  requirements.txt
recommendation/utils/: async_helper.py  cache_updater.py  collection_fetcher.py  collection_helper.py  collection_membership_helper.py  configuration.py  difficulty_helper.py  event_logger.py  language_codes.py  language_pairs.py  lead_section_size_helper.py  logger.py  recommendation_helper.py  search_query_builder.py  section_recommendation_helper.py  sitematrix_helper.py  size_helper.py
recommendation/utils/test/: conftest.py  test_event_logger.py  test_language_pairs.py
recommendation/web/: gapfinder.py
recommendation/web/static/: bower.json  cookies.js  event_logger.js  gf-articles.tag  gf-create.tag  gf-disclaimer.tag  gf-input.tag  gf-preview.tag  gf-title.tag  gf-welcome.tag  gf-wikigapfinder-campaign-info.tag  style.css
recommendation/web/templates/: index.html
scripts/: rec-api-test.js
(+118 files in other folders)
