[tool.poetry]
name = "recommendation"
version = "1.0.0"
description = "Provide recommendations in Wikimedia projects"
authors = ["Wikimedia Research <nschaaf@wikimedia.org>"]
license = "Apache"
readme = "README.md"
classifiers = ["Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki"]


[tool.poetry.urls]
Homepage = "https://github.com/wikimedia/research-recommendation-api"
Repository = "https://github.com/wikimedia/research-recommendation-api"
Issues = "https://github.com/derenrich/wikibase-rest-api-client/issues"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
fastapi = "^0.110.1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
ecs-logging = "^2.1.0"
httpx = "^0.27.0"
pydantic-settings = "^2.3.4"
gunicorn = "^22.0.0"
diskcache = "^5.6.3"
psutil = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"
ruff = "^0.5.0"
tox = "^4.16.0"
locust = "^2.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

[tool.poetry.scripts]
start = "recommendation.main:start"
update-cache = "recommendation.utils.cache_updater:start"