[tool.poetry]
name = "recommendation"
version = "1.0.0"
description = "Provide recommendations in Wikimedia projects"
authors = ["Wikimedia Research <nschaaf@wikimedia.org>"]
license = "Apache"
readme = "README.md"
classifiers = ["Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki"]


[tool.poetry.urls]
Homepage = "https://github.com/wikimedia/research-recommendation-api"
Repository = "https://github.com/wikimedia/research-recommendation-api"
Issues = "https://github.com/derenrich/wikibase-rest-api-client/issues"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.6"
fastapi = "^0.115.11"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
ecs-logging = "^2.1.0"
httpx = "^0.28.1"
pydantic-settings = "^2.8.1"
gunicorn = "^23.0.0"
diskcache = "^5.6.3"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"
pre-commit = "^4.1.0"
ruff = "^0.9.10"
tox = "^4.24.2"
locust = "^2.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

[tool.poetry.scripts]
start = "recommendation.main:start"
update-cache = "recommendation.utils.cache_updater:start"
